# SDLRenderer

./: CMakeLists.txt  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h  main.cpp
Engine/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  GameObjectDispatcher.cpp  GameObjectDispatcher.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Util.cpp  Util.h  Window.cpp  Window.h
Engine/Input/: KeyInputHandler.cpp  KeyInputHandler.h
Engine/Math/: Box.cpp  Box.h  Direction.h  Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h
Engine/Scene/: Animation.cpp  Animation.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Game/: Game.cpp  Game.h
Game/Handlers/: DecorationHandler.cpp  DecorationHandler.h
Game/Objects/: Decoration.cpp  Decoration.h  FacingDirection.h  JumpParticles.cpp  JumpParticles.h  MediumPlatform.cpp  MediumPlatform.h  Player.cpp  Player.h  PlayerHair.cpp  PlayerHair.h  PlayerState.h  SmallPlatform.cpp  SmallPlatform.h  Spike.cpp  Spike.h  TextObject.cpp  TextObject.h  WallObject.cpp  WallObject.h
Game/Scenes/: Level.cpp  Level.h  MainMenu.cpp  MainMenu.h  TestScene.cpp  TestScene.h
SDL2/: sdl2-config.cmake
glew-2.2.0/include/GL/: glew.h
